--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     labels:
       - "traefik.enable=true"
       # 1 WebSocket connection
-      - "traefik.http.routers.v2ray-ws1.rule=Host(`example.com`) && PathPrefix(`/ws`)"
+      - "traefik.http.routers.v2ray-ws1.rule=Host(`example.com`) && PathPrefix(`/ws`)"  # fix domain
       - "traefik.http.routers.v2ray-ws1.entrypoints=websecure"
       - "traefik.http.routers.v2ray-ws1.tls.certresolver=myresolver"
       - "traefik.http.routers.v2ray-ws1.middlewares=v2ray-headers"
@@ -48,7 +48,7 @@ services:
       - "traefik.http.services.v2ray-ws1.loadbalancer.server.port=8388"
 
       # 2 WebSocket connection
-      - "traefik.http.routers.v2ray-ws2.rule=Host(`example.com`) && PathPrefix(`/2_ws`)"
+      - "traefik.http.routers.v2ray-ws2.rule=Host(`example.com`) && PathPrefix(`/2_ws`)" # fix domain
       - "traefik.http.routers.v2ray-ws2.entrypoints=websecure"
       - "traefik.http.routers.v2ray-ws2.tls.certresolver=myresolver"
       - "traefik.http.routers.v2ray-ws2.middlewares=v2ray-headers"
@@ -56,7 +56,7 @@ services:
       - "traefik.http.services.v2ray-ws2.loadbalancer.server.port=8389"
 
       # 3 WebSocket connection
-      - "traefik.http.routers.v2ray-ws3.rule=Host(`example.com`) && PathPrefix(`/3_ws`)"
+      - "traefik.http.routers.v2ray-ws3.rule=Host(`example.com`) && PathPrefix(`/3_ws`)" # fix domain
       - "traefik.http.routers.v2ray-ws3.entrypoints=websecure"
       - "traefik.http.routers.v2ray-ws3.tls.certresolver=myresolver"
       - "traefik.http.routers.v2ray-ws3.middlewares=v2ray-headers"
