--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,11 @@ services:
       - "--providers.docker=true"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
+      - "--entrypoints.reality.address=:8446"
+#      - "--entrypoints.websecure.http.tls.passthrough=true"
       - "--certificatesresolvers.myresolver.acme.httpchallenge=true"
       - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
-      - "--certificatesresolvers.myresolver.acme.email=admin@example.com"
+      - "--certificatesresolvers.myresolver.acme.email=${EMAIL}"
       - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
     network_mode: "host"
     volumes:
@@ -31,7 +33,7 @@ services:
       - "traefik.http.routers.v2ray.entrypoints=websecure"
       - "traefik.http.routers.v2ray.tls.certresolver=myresolver"
       - "traefik.http.services.v2ray.loadbalancer.server.port=8388"
-      # 0 WebSocket connection
+      # WebSocket connection
       - "traefik.http.routers.v2ray-ws1.rule=Host(`${DOMAIN}`) && PathPrefix(`/ws`)"
       - "traefik.http.routers.v2ray-ws1.entrypoints=websecure"
       - "traefik.http.routers.v2ray-ws1.tls.certresolver=myresolver"
@@ -39,21 +41,37 @@ services:
       - "traefik.http.routers.v2ray-ws1.service=v2ray-ws1"
       - "traefik.http.services.v2ray-ws1.loadbalancer.server.port=8388"
 
-      # 1 WebSocket connection
-      - "traefik.http.routers.v2ray-ws2.rule=Host(`${PUBLIC_DOMAIN}`) && PathPrefix(`/1_ws`)"
+      # Public WebSocket connection
+      - "traefik.http.routers.v2ray-ws2.rule=Host(`${PUBLIC_DOMAIN}`) && PathPrefix(`/public_ws`)"
       - "traefik.http.routers.v2ray-ws2.entrypoints=websecure"
       - "traefik.http.routers.v2ray-ws2.tls.certresolver=myresolver"
       - "traefik.http.routers.v2ray-ws2.middlewares=v2ray-headers"
       - "traefik.http.routers.v2ray-ws2.service=v2ray-ws2"
       - "traefik.http.services.v2ray-ws2.loadbalancer.server.port=8389"
 
-      # 2 WebSocket connection
-      - "traefik.http.routers.v2ray-ws3.rule=Host(`${DOMAIN}`) && PathPrefix(`/2_ws`)"
+      # Friend WebSocket connection
+      - "traefik.http.routers.v2ray-ws3.rule=Host(`${DOMAIN}`) && PathPrefix(`/friend_ws`)"
       - "traefik.http.routers.v2ray-ws3.entrypoints=websecure"
       - "traefik.http.routers.v2ray-ws3.tls.certresolver=myresolver"
       - "traefik.http.routers.v2ray-ws3.middlewares=v2ray-headers"
       - "traefik.http.routers.v2ray-ws3.service=v2ray-ws3"
       - "traefik.http.services.v2ray-ws3.loadbalancer.server.port=8390"
 
+      # VLESS WebSocket connection
+      - "traefik.http.routers.v2ray-vless.rule=Host(`${DOMAIN}`) && PathPrefix(`/vless_ws`)"
+      - "traefik.http.routers.v2ray-vless.entrypoints=websecure"
+      - "traefik.http.routers.v2ray-vless.tls.certresolver=myresolver"
+      - "traefik.http.routers.v2ray-vless.middlewares=v2ray-headers"
+      - "traefik.http.routers.v2ray-vless.service=v2ray-vless"
+      - "traefik.http.services.v2ray-vless.loadbalancer.server.port=8444"
+
+      # Reality connection
+      - "traefik.tcp.routers.v2ray-reality.rule=HostSNI(`*`)"
+      - "traefik.tcp.routers.v2ray-reality.entrypoints=reality"
+      - "traefik.tcp.routers.v2ray-reality.service=v2ray-reality"
+      - "traefik.tcp.services.v2ray-reality.loadbalancer.server.port=8447"
+
+
       # Middleware applied to both routers
       - "traefik.http.middlewares.v2ray-headers.headers.customrequestheaders.X-Forwarded-Proto=https"
+
